# scout

./: .gitignore  COMANDOS.txt  LICENSE  README.md  ROADMAP.md  atualizar_e_ler.bat  gerar_exe.bat  ler_relatorios.bat  lote_mensal.bat  pyproject.toml
_preview_acoes/: ABEV3.html  ALOS3.html  ANIM3.html  ASAI3.html  AUAU3.html  AURE3.html
dados/: MXRF11 _10 Emissao_ - Termo de Aceitacao e Termo de Adesao ao Regulamento _SF 17.06.2024_ v.travada.docx  classificacao_etfs.csv  taxas_etfs.csv
docs/: ACOES.md  ETFS.md  JURIDICO.md  RENDAFIXA.md  VISAO.md
leituras/: 000011.json  0B4Q11.json  0BRY11.json  0CNP11.json  0D7011.json  0DLL11.json  0E9L11.json  0EHW11.json  0EI911.json  0FFP11.json  0JS311.json  0NDO11.json  0NIQ11.json  0O9X11.json  0OC111.json  0OXG11.json  0P9411.json  0PFB11.json  0PI511.json  0PRP11.json  0PRQ11.json  0PT411.json  0Q8X11.json  0QCI11.json  0QTD11.json  0QTT11.json  0QWP11.json  0R5L11.json  0RFX11.json  0RJI11.json  0ROZ11.json  0S4611.json  0S4J11.json  0S7Q11.json  0SH811.json  0SMX11.json  ABCB4.json  ABCP11.json  ABEV3.json  ADSH11.json  (+500 more)
tests/: conftest.py  test_acao_flags.py  test_acoes_site.py  test_administrador.py  test_apoio_e_tooltips.py  test_banco_flags.py  test_banco_site.py  test_bancos.py  test_calculadoras_js.py  test_coleta_analise.py  test_cotacoes.py  test_empresas.py  test_etfs.py  test_fnet_ia.py  test_fre_processos.py  test_fundamentos.py  test_gordon.py  test_indices_rentabilidade.py  test_interativo.py  test_precos_tpf.py  test_ranking.py  test_relatorio_html.py  test_relatorio_terminal.py  test_site.py  (+4 more)
(+52 files in other folders)
